--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/mgramigna/letterboxd-search#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "numeral": "^2.0.6",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "scraperjs": "^1.2.0"
   }
 }
