--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "numeral": "^2.0.6",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "scraperjs": "^1.2.0"
+    "request-promise": "^4.2.2"
   }
 }
